# raven

./: .gitignore  DEMO.md  DEVPOST.md  DEVPOST_SUBMISSION.md  README.md  conftest.py  pyproject.toml  requirements-docs.txt  requirements-fetch.txt  requirements-mcp.txt  requirements-web.txt  requirements.txt  stitch.md
bench/: run_gate.py  run_m2.py  run_relay.py  smoke_fastembed.py  warm_cache.py
data/: corpus_friday_dinner.json  task_friday_dinner.json  venues_friday_dinner.json
frontend/: .env.local.example  package-lock.json  package.json
frontend/app/: globals.css  layout.js  page.js
frontend/lib/: api.js
raven/: __init__.py  agents.py  baselines.py  compress.py  guidelines.py  handlers.py  ingest.py  ingest_docs.py  llm.py  relay.py  retrieve.py  roles.py  schemas.py  score.py  store.py  tokens.py  verifier.py
raven/fetch/: AGENT_README.md  __init__.py  bureau_demo.py  chat_smoke.py  raven_agent.py  raven_hosted_agent.py
raven/mcp/: README.md  _logic.py  server.py  smoke.py
raven/web/: __init__.py  api.py  pricing.py  services.py
tests/: test_ab_selection.py  test_agents.py  test_baselines.py  test_compress.py  test_gate.py  test_handlers.py  test_ingest.py  test_ingest_docs.py  test_ingest_subtypes.py  test_llm.py  test_mcp_logic.py  test_passport_counts_actual_prompt_tokens.py  test_relay.py  test_retrieve.py  test_score.py  test_score_structured.py  test_store_factory.py  test_tokens.py  test_verifier.py  test_web_services.py
