[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "raven-mcp"
version = "0.1.0"
description = "RAVEN — recipient-aware context-passport compression, packaged as an MCP server (and the underlying engine)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["mcp>=1.0"]

[project.scripts]
raven-mcp = "raven.mcp.server:main"

[project.urls]
Homepage = "https://github.com/thesantoshpant/raven"

[tool.setuptools]
packages = ["raven", "raven.mcp", "raven.fetch", "raven.web"]

[tool.pytest.ini_options]
# Makes `raven` importable and tests runnable from ANY directory (not just repo root),
# which the root conftest.py shim alone did not guarantee.
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"   # no .pytest_cache -> clean, professional output anywhere
